--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="content-wrapper">
-  <app-side-nav></app-side-nav>
+  <app-topnav class="md:hidden"></app-topnav>
+  <app-side-nav class="hidden md:block"></app-side-nav>
+  <app-side-nav-resp class="md:hidden"></app-side-nav-resp>
   <router-outlet></router-outlet>
 </div>
