--- a/src/app/topnav/topnav.component.html
+++ b/src/app/topnav/topnav.component.html
@@ -1,4 +1,4 @@
-<nav class="top-nav bg-black text-white fixed w-full top-0 border-b border-b-white flex items-center justify-between p-[12px_16px]">
+<nav class="top-nav bg-black text-white sticky w-full top-0 border-b border-b-white flex items-center justify-between p-[12px_16px]">
     <a href="#" class="font-['instagram\_font'] text-[24px] pr-[15px]">NotInstagram</a>
     <ul class="nav-list flex items-center">
         <li>
