--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -12,7 +12,7 @@
                 class="border border-gray-400 p-[8px_16px] bg-[rgb(250_250_250)] text-gray-600 rounded-md w-full">
         </div>
         <div class="form-group">
-            <button type="submit"
+            <button routerLink="/home" type="submit"
                 class="w-full rounded-lg p-[8px_16px] flex items-center justify-center font-bold text-white bg-blue-400">Log
                 in</button>
         </div>
