--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,18 +1,19 @@
 <div class="login-wrapper h-screen w-full flex items-center justify-center bg-gray-100">
-    <form action="javascript:void(0)" method="post" class="w-full max-w-[350px] p-[40px] border border-gray-400 rounded-md bg-white">
+    <form [formGroup]="loginForm" (submit)="login()"  method="post" class="w-full max-w-[350px] p-[40px] border border-gray-400 rounded-md bg-white">
         <div class="header mb-8 text-center">
             <h3 class="header-title font-['instagram\_font'] text-[40px] text-black">NotInstagram</h3>
         </div>
+        <p *ngIf="message" class="py-2 text-red-600 font-medium text-md">{{message}}</p>
         <div class="form-group mb-3">
-            <input type="text" name="" id="" placeholder="Username or Email"
-                class="border border-gray-400 p-[8px_16px] bg-[rgb(250_250_250)] text-gray-600 rounded-md w-full">
+            <input type="text" name="" id="email" placeholder="Email" formControlName="email"
+                class="border border-gray-400 p-[8px_16px] bg-[rgb(250_250_250)] text-gray-700 rounded-md w-full">
         </div>
         <div class="form-group mb-5">
-            <input type="password" name="" id="" placeholder="Password"
-                class="border border-gray-400 p-[8px_16px] bg-[rgb(250_250_250)] text-gray-600 rounded-md w-full">
+            <input type="password" name="" id="password" placeholder="Password" formControlName="password"
+                class="border border-gray-400 p-[8px_16px] bg-[rgb(250_250_250)] text-gray-700 rounded-md w-full">
         </div>
         <div class="form-group">
-            <button routerLink="/home" type="submit"
+            <button type="submit"
                 class="w-full rounded-lg p-[8px_16px] flex items-center justify-center font-bold text-white bg-blue-400">Log
                 in</button>
         </div>
