--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,10 +1,47 @@
-<div class="content-wrapper h-screen bg-[#121212]">
+<div class="content-wrapper h-screen bg-[#121212] relative">
   <app-topnav class="md:hidden"></app-topnav>
-  <app-side-nav class="hidden md:block"></app-side-nav>
+  <app-side-nav class="hidden md:block" (toggleUploadModal)="getUploadModalState($event)"
+    [showUploadModal]="showUploadModal"></app-side-nav>
   <app-side-nav-resp class="md:hidden"></app-side-nav-resp>
   <div class="post-container md:ml-[80px] xl:ml-[250px] flex justify-center h-auto bg-[#121212]">
     <div class="inner-container w-[90%] pt-[50px] pb-[70px] flex flex-col items-center gap-5 bg-[#121212] h-auto">
-      <app-post-card *ngFor="let post of posts" [post]="post" ></app-post-card>
+      <app-post-card *ngFor="let post of posts" [post]="post"></app-post-card>
+    </div>
+  </div>
+
+  <div
+    class="add-media-modal fixed w-full h-full items-center justify-center bg-[rgba(0_0_0/0.6)] top-0 left-0 overflow-y-auto"
+    [ngClass]="showUploadModal ? 'flex' : 'hidden'">
+    <button class="close-btn fixed top-0 right-0 p-[20px_30px]" (click)="closeModal()">
+      <fa-icon [icon]="faClose" class="text-white text-2xl"></fa-icon>
+    </button>
+    <div class="add-media-container bg-[rgb(18_18_18)] w-[40%] min-h-[450px] rounded-xl flex flex-col items-center">
+      <div
+        class="modal-header border border-gray-400 border-t-0 border-x-0 p-[20px] text-white text-center w-full text-xl">
+        Create
+        New Post</div>
+      <div class="modal-body w-full flex-grow flex flex-col items-center justify-center pt-[10px]">
+        <div class="form-group mb-4 py-4" [ngClass]="imageSrc ? 'hidden' : 'block'">
+          <label for="media"
+            class="upload-file p-[5px_10px] text-white rounded-md bg-blue-500 text-center cursor-pointer text-[18px]">Select
+            from
+            device</label>
+          <input type="file" name="media" id="media" class="hidden" placeholder="Upload File"
+            (change)="readUrl($event)">
+        </div>
+        <div class="form-group mb-4 flex" *ngIf="imageSrc">
+          <div class="img-container w-full max-h-[350px] mb-3">
+            <img [src]="imageSrc || defaultImage" alt="Uploaded-image" class="w-full h-full object-contain">
+          </div>
+          <textarea name="caption" id="caption" cols="30" rows="10" placeholder="Write a caption..."
+            class="bg-[rgb(18_18_18)] text-white w-full p-2"></textarea>
+        </div>
+        <div class="form-group mb-4 flex py-4" *ngIf="imageSrc">
+          <button
+            class="p-[5px_10px] text-white rounded-md bg-blue-500 text-center cursor-pointer text-[18px]">Share</button>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
