[REMOVED & ADDED]: removed side-nav-resp component and updated side-nav component to use in mobile view, added user profile component

--- a/src/app/post-card/post-card.component.html
+++ b/src/app/post-card/post-card.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
     </div>
-    <div class="post-content min-h-[250px] flex justify-end items-center bg-white">
+    <div class="post-content min-h-[250px] max-h-[580px] flex justify-end items-center bg-white overflow-hidden">
         <img src="http://127.0.0.1:8000/{{post.post_img}}" alt="Post Media" class="w-full h-auto object-contain">
     </div>
     <div class="post-footer">
