[ADDED]: added login guard for login page, changed postcard width design

--- a/src/app/post-card/post-card.component.html
+++ b/src/app/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<div class="post-card bg-black border border-[rgb(54_54_54)] rounded-md w-[100%] max-w-[470px] text-white">
+<div class="post-card bg-black border border-[rgb(54_54_54)] rounded-md w-full md:w-[470px] text-white">
     <div class="post-header p-[10px] flex items-center">
         <div class="img-container user-img w-[32px] h-[32px] rounded-full overflow-hidden bg-red">
             <img src="" alt="" class="w-full h-full object-cover">
@@ -11,7 +11,7 @@
             </div>
         </div>
     </div>
-    <div class="post-content min-h-[250px] max-h-[580px] flex justify-end items-center bg-white overflow-hidden">
+    <div class="post-content min-h-[250px] max-h-[580px] w-full flex justify-end items-center bg-white overflow-hidden">
         <img src="http://127.0.0.1:8000/{{post.post_img}}" alt="Post Media" class="w-full h-auto object-contain">
     </div>
     <div class="post-footer">
