[ADDED]: added layouts, added seperate component for add media modal(not functioning yet), added link to profile page, minor improvements code for login

--- a/src/app/post-card/post-card.component.html
+++ b/src/app/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<div class="post-card bg-black border border-[rgb(54_54_54)] rounded-md w-full md:w-[470px] text-white">
+<div class="post-card bg-black border border-[rgb(54_54_54)] rounded-md w-[calc(100vw-40px)] md:w-[470px] text-white">
     <div class="post-header p-[10px] flex items-center">
         <div class="img-container user-img w-[32px] h-[32px] rounded-full overflow-hidden bg-red">
             <img src="" alt="" class="w-full h-full object-cover">
