--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,13 +1,13 @@
-<nav class="side-nav bg-black text-white fixed w-full p-[8px_12px] bottom-0 md:h-screen md:w-[80px] xl:w-[250px] md:top-0 md:left-0 md:p-[12px]">
-    <a href="#" class="desktop-brand hidden xl:block font-['instagram\_font'] text-[30px] p-[25px_15px] mb-[10px]">NotInstagram</a>
-    <a href="#" class="responsive-brand hidden md:block xl:hidden p-[25px_15px] mb-[10px]">
+<nav class="side-nav bg-black text-white fixed w-full p-[8px_12px] bottom-0 md:w-[80px] xl:w-[250px] md:top-0 md:left-0 md:p-[12px] md:h-screen">
+    <a routerLink="/home" class="desktop-brand hidden xl:block font-['instagram\_font'] text-[30px] p-[25px_15px] mb-[10px]">NotInstagram</a>
+    <a routerLink="/home" class="responsive-brand hidden md:block xl:hidden p-[25px_15px] mb-[10px]">
         <span class="icon-container">
             <fa-icon [icon]="faInstagram" class="text-3xl"></fa-icon>
         </span>
     </a>
     <ul class="nav-list flex items-center justify-between md:flex-col">
         <li class="nav-item w-full">
-            <a href="#" class="nav-link p-[12px] w-[56px] h-[56px] xl:w-[unset] xl:h-[unset] flex items-center justify-center xl:justify-start hover:bg-[rgb(18_18_18)] rounded-[100vh]">
+            <a routerLink="/home" class="nav-link p-[12px] w-[56px] h-[56px] xl:w-[unset] xl:h-[unset] flex items-center justify-center xl:justify-start hover:bg-[rgb(18_18_18)] rounded-[100vh]">
                 <span class="icon-container">
                     <fa-icon [icon] = "faHome" class="text-2xl"></fa-icon>
                 </span>
@@ -61,8 +61,8 @@
                 <span class="label-text pl-[16px] hidden xl:inline-block">Create</span>
             </a>
         </li>
-        <li class="nav-item w-full">
-            <a routerLink="/profile" class="nav-link p-[12px] w-[56px] h-[56px] xl:w-[unset] xl:h-[unset] flex items-center justify-center xl:justify-start hover:bg-[rgb(18_18_18)] rounded-[100vh]">
+        <li class="nav-item w-full relative">
+            <a routerLink="/home/profile" class="nav-link p-[12px] w-[56px] h-[56px] xl:w-[unset] xl:h-[unset] flex items-center justify-center xl:justify-start hover:bg-[rgb(18_18_18)] rounded-[100vh]">
                 <span class="img-container w-[24px] h-[24px] rounded-full bg-slate-400 inline-block"></span>
                 <span class="label-text pl-[16px] hidden xl:inline-block">Profile</span>
             </a>
