--- a/src/app/modules/shared/post-card/post-card.component.html
+++ b/src/app/modules/shared/post-card/post-card.component.html
@@ -5,7 +5,7 @@
             <div class="img-container user-img w-[32px] h-[32px] rounded-full overflow-hidden bg-red">
                 <img src="" alt="" class="w-full h-full object-cover">
             </div>
-            <div class="user-name font-semibold pl-[10px]">{{post.name}}</div>
+            <a href="#" class="user-name font-semibold pl-[10px]">{{post.name}}</a>
             <div class="post-settings ml-auto flex items-center">
                 <button class="follow-btn text-white bg-[#242424] p-[5px_12px] rounded-md">Follow</button>
                 <div class="icon-container px-[10px]">
