--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,11 @@
     font-style: normal;
 
 }
+
+.hide-scrollbar{
+    scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar{
+    display: none;
+}
