[UPDATED]: updated user profile component to show both auth user and other user's data

--- a/src/app/modules/home/user-profile/user-profile.component.html
+++ b/src/app/modules/home/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
 <div class="flex justify-center px-0 md:px-[8%]  w-[100%]">
     <div class="inner-container flex flex-col items-center md:w-[85%] lg:w-[50%] w-[100%]">
 
-        <div class="user-details flex mb-[30px] justify-start items-center w-full px-2 md:px-0">
+        <div class="user-details flex pb-[30px] justify-start items-center w-full px-2 md:px-0 bg-[#121212]">
             <div
                 class="profile-img flex-shrink rounded-full overflow-hidden w-[70px] h-[70px] md:w-[150px] md:h-[150px] flex items-center justify-center">
                 <img class="w-full h-full object-cover" src="http://127.0.0.1:8000/{{userProfilePic}}" alt=""
