--- a/src/app/modules/shared/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/side-nav/side-nav.component.html
@@ -62,7 +62,7 @@
             </a>
         </li>
         <li class="nav-item w-full">
-            <a routerLink="/home/feed/profile" class="nav-link p-[12px] w-[56px] h-[56px] xl:w-[unset] xl:h-[unset] flex items-center justify-center xl:justify-start hover:bg-[rgb(18_18_18)] rounded-[100vh]">
+            <a [routerLink]="['/home/feed/profile']" class="nav-link p-[12px] w-[56px] h-[56px] xl:w-[unset] xl:h-[unset] flex items-center justify-center xl:justify-start hover:bg-[rgb(18_18_18)] rounded-[100vh]">
                 <span class="img-container w-[24px] h-[24px] rounded-full bg-slate-400 inline-block"></span>
                 <span class="label-text pl-[16px] hidden xl:inline-block">Profile</span>
             </a>
