[REMOVED]: removed height from dashboard grid

--- a/src/app/modules/dashboard/grid/grid.component.html
+++ b/src/app/modules/dashboard/grid/grid.component.html
@@ -1,5 +1,5 @@
 <!-- <kendo-calender type="classic"></kendo-calender> -->
-<kendo-grid [data]="data" [height]="420">
+<kendo-grid [data]="data">
     <kendo-grid-column title="Post Image" [width]="140" [class]="{ 'text-center': true, 'padding': 20 }">
         <ng-template kendoGridCellTemplate let-dataItem>
             <div class="img-container user-img w-[120px] h-[120px] overflow-hidden bg-red">
