[REMOVED & ADDED]:removed hidden sidebar in homepage and added cache in user profile

--- a/src/app/modules/home/shared/layout/layout.component.html
+++ b/src/app/modules/home/shared/layout/layout.component.html
@@ -3,7 +3,7 @@
   <app-side-nav (toggleUploadModal)="getUploadModalState($event)"
     [showUploadModal]="showUploadModal"></app-side-nav>
   <!-- <app-side-nav-resp class="md:hidden"></app-side-nav-resp> -->
-  <div class="outer-container md:ml-[80px] lg:ml-[250px] flex flex-col items-center overflow-y-auto w-full md:w-[calc(100%-80px)] lg:w-[calc(100%-250px)] h-[calc(100vh-77px)] md:h-screen pt-[30px] pb-[100px] lg:pb-[50px] bg-[#121212] hide-scrollbar">
+  <div class="outer-container md:ml-[80px] lg:ml-[250px] flex flex-col items-center overflow-y-auto w-full md:w-[calc(100%-80px)] lg:w-[calc(100%-250px)] h-[calc(100vh-77px)] md:h-screen pt-[30px] pb-[100px] lg:pb-[50px] bg-[#121212]">
       <router-outlet></router-outlet>
      
   </div>
