--- a/src/app/modules/home/user-profile/user-profile.component.html
+++ b/src/app/modules/home/user-profile/user-profile.component.html
@@ -1,10 +1,10 @@
 <!-- <app-layout> -->
-<div class="flex justify-center px-0 md:px-[8%]  w-[100%]">
+<div class="flex justify-center px-0 md:px-[8%]  w-[100%] relative">
     <div class="inner-container flex flex-col items-center md:w-[85%] lg:w-[50%] w-[100%]">
 
         <div class="user-details flex pb-[30px] justify-start items-center w-full px-2 md:px-0 bg-[#121212]">
             <div
-                class="profile-img flex-shrink rounded-full overflow-hidden w-[70px] h-[70px] md:w-[150px] md:h-[150px] flex items-center justify-center">
+                class="profile-img flex-shrink rounded-full overflow-hidden w-[70px] h-[70px] md:w-[150px] md:h-[150px] flex items-center justify-center" (click)="openModal()">
                 <img class="w-full h-full object-cover" src="http://127.0.0.1:8000/{{userProfilePic}}" alt=""
                     *ngIf="userProfilePic; else defaultImg">
                 <!-- <img src="{{defaultImage}}" alt=""> -->
@@ -32,6 +32,36 @@
             </div>
         </div>
 
+    </div>
+    <div class="add-media-modal fixed w-full h-full flex-col items-center justify-center bg-[rgba(0_0_0/0.6)] top-0 left-0 overflow-y-auto"
+        [ngClass]="showUploadModal ? 'flex' : 'hidden'">
+        <button class="close-btn mb-auto flex w-full justify-end bg-transparent p-[20px_30px]" (click)="closeModal()">
+            <fa-icon [icon]="faClose" class="text-white text-2xl"></fa-icon>
+        </button>
+        <form [formGroup]="form"
+            class="mb-auto add-media-container bg-[rgb(18_18_18)] max-w-[550px] w-[90%] min-h-[450px] rounded-xl flex flex-col items-center"
+            entype="multipart/form-data" type="post" (submit)="submitForm()">
+            <div class="modal-header border border-gray-400 border-t-0 border-x-0 p-[20px] text-white text-center w-full text-xl">
+                Upload Profile Picture
+            </div>
+            <div class="modal-body w-full flex-grow flex flex-col items-center justify-center pt-[10px]">
+                <div class="form-group mb-4 py-4" [ngClass]="imageSrc ? 'hidden' : 'block'">
+                    <label for="media" class="upload-file p-[5px_10px] text-white rounded-md bg-blue-500 text-center cursor-pointer text-[18px]">
+                        Select from device
+                    </label>
+                    <input formControlName="profile_img" type="file" name="media" id="media" class="hidden" placeholder="Upload File" (change)="readUrl($event)">
+                </div>
+                <div class="form-group mb-4 flex flex-col md:flex-row gap-5" *ngIf="imageSrc">
+                    <div class="img-container w-full max-h-[350px] mb-3">
+                        <img [src]="imageSrc || defaultImage" alt="Uploaded-image" class="w-full h-full object-contain">
+                    </div>
+                    <!-- <textarea formControlName="post_desc" name="caption" id="caption" placeholder="Write a caption..." class="bg-[rgb(18_18_18)] text-white w-full p-2"></textarea> -->
+                </div>
+                <div class="form-group mb-4 flex py-4" *ngIf="imageSrc">
+                    <button class="p-[5px_10px] text-white rounded-md bg-blue-500 text-center cursor-pointer text-[18px]" type="submit">Share</button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 <!-- </app-layout> -->
