[ADDED]: added changes in the auth service and now users can only upload and change their own profile picture

--- a/src/app/modules/home/user-profile/user-profile.component.html
+++ b/src/app/modules/home/user-profile/user-profile.component.html
@@ -58,7 +58,7 @@
                     <!-- <textarea formControlName="post_desc" name="caption" id="caption" placeholder="Write a caption..." class="bg-[rgb(18_18_18)] text-white w-full p-2"></textarea> -->
                 </div>
                 <div class="form-group mb-4 flex py-4" *ngIf="imageSrc">
-                    <button class="p-[5px_10px] text-white rounded-md bg-blue-500 text-center cursor-pointer text-[18px]" type="submit">Share</button>
+                    <button class="p-[5px_10px] text-white rounded-md bg-blue-500 text-center cursor-pointer text-[18px]" type="submit">Upload</button>
                 </div>
             </div>
         </form>
