--- a/src/app/modules/shared/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/side-nav/side-nav.component.html
@@ -64,12 +64,12 @@
         <li class="nav-item w-full">
             <a [routerLink]="['/home/feed/profile']" class="nav-link p-[12px] w-[56px] h-[56px] xl:w-[unset] xl:h-[unset] flex items-center justify-center xl:justify-start hover:bg-[rgb(18_18_18)] rounded-[100vh]">
                 <span class="img-container w-[24px] h-[24px] rounded-full bg-slate-400 inline-block overflow-hidden">
-                    <img src="http://127.0.0.1:8000/{{authUserImg}}" class="w-full h-full object-cover" alt="" *ngIf="authUserImg; else default">
+                    <img src="http://127.0.0.1:8000/{{user.profile_img}}" class="w-full h-full object-cover" alt="" *ngIf="user.profile_img; else default">
                     <ng-template #default>
                         <img src="{{defaultImg}}" alt="" class="w-full h-full object-cover">
                     </ng-template>
                 </span>
-                <span class="label-text pl-[16px] hidden xl:inline-block">{{authUserName}}</span>
+                <span class="label-text pl-[16px] hidden xl:inline-block">{{user.name}}</span>
             </a>
         </li>
         <li class="nav-item w-full relative hidden md:block">
