--- a/src/app/modules/home/user-profile/user-profile.component.html
+++ b/src/app/modules/home/user-profile/user-profile.component.html
@@ -46,10 +46,10 @@
             </div>
             <div class="modal-body w-full flex-grow flex flex-col items-center justify-center pt-[10px]">
                 <div class="form-group mb-4 py-4" [ngClass]="profileImageSrc ? 'hidden' : 'block'">
-                    <label for="media" class="upload-file p-[5px_10px] text-white rounded-md bg-blue-500 text-center cursor-pointer text-[18px]">
+                    <label for="profileMedia" class="upload-file p-[5px_10px] text-white rounded-md bg-blue-500 text-center cursor-pointer text-[18px]">
                         Select from device
                     </label>
-                    <input formControlName="profile_img" type="file" name="media" id="media" class="hidden" placeholder="Upload File" (change)="readUrl($event)">
+                    <input formControlName="profile_img" type="file" name="media" id="profileMedia" class="hidden" placeholder="Upload File" (change)="readUrl($event)">
                 </div>
                 <div class="form-group mb-4 flex flex-col md:flex-row gap-5" *ngIf="profileImageSrc">
                     <div class="img-container w-full max-h-[350px] mb-3">
